--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@popperjs/core": "^2.9.1",
     "angular-cli-ghpages": "^1.0.0-rc.1",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.4.0",
     "jquery": "^3.6.0",
+    "ngx-page-scroll": "^7.0.4",
+    "ngx-page-scroll-core": "^7.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
